--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <!-- font-aswam -->
+    <script src="https://kit.fontawesome.com/350a5a38f7.js" crossorigin="anonymous"></script>
 </head>
 <main>
     <section class="container">
@@ -91,6 +93,77 @@
         <h2 class="section-title">
             Latest courses
         </h2>
+        <div class="courses">
+            <div class="course">
+                <div class="course-banner">
+                    <img src="images/courses/course-1.png" alt="">
+                </div>
+                <div class="course-detail">
+                    <h2 class="course-title">Learn complete React 2022</h2>
+                    <p class="course-author">MD BADSHA</p>
+                    <div class="course-info">
+                        <div>
+                            <i class="far fa-star filled"></i>
+                            <i class="far fa-star filled"></i>
+                            <i class="far fa-star filled"></i>
+                            <i class="far fa-star filled"></i>
+                            <i class="far fa-star empty"></i>
+                            <span>4.5</span>
+                        </div>
+                        <div class="course-duration">
+                            <i class="far fa-clock"></i>
+                            01:25hr
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="course">
+                <div class="course-banner">
+                    <img src="images/courses/course-2.png" alt="">
+                </div>
+                <div class="course-detail">
+                    <h2 class="course-title">Learn complete React 2022</h2>
+                    <p class="course-author">MD BADSHA</p>
+                    <div class="course-info">
+                        <div>
+                            <i class="far fa-star filled"></i>
+                            <i class="far fa-star filled"></i>
+                            <i class="far fa-star filled"></i>
+                            <i class="far fa-star filled"></i>
+                            <i class="far fa-star empty"></i>
+                            <span>4.5</span>
+                        </div>
+                        <div class="course-duration">
+                            <i class="far fa-clock"></i>
+                            01:25hr
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="course">
+                <div class="course-banner">
+                    <img src="images/courses/course-3.png" alt="">
+                </div>
+                <div class="course-detail">
+                    <h2 class="course-title">Learn complete React 2022</h2>
+                    <p class="course-author">MD BADSHA</p>
+                    <div class="course-info">
+                        <div>
+                            <i class="far fa-star filled"></i>
+                            <i class="far fa-star filled"></i>
+                            <i class="far fa-star filled"></i>
+                            <i class="far fa-star filled"></i>
+                            <i class="far fa-star empty"></i>
+                            <span>4.5</span>
+                        </div>
+                        <div class="course-duration">
+                            <i class="far fa-clock"></i>
+                            01:25hr
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </main>
 
