--- a/index.html
+++ b/index.html
@@ -10,33 +10,45 @@
     <!-- font-aswam -->
     <script src="https://kit.fontawesome.com/350a5a38f7.js" crossorigin="anonymous"></script>
 </head>
+<header>
+    <nav>
+        <div class="nav">
+            <a class="buty" href="http://">Home</a>
+            <a class="buty" href="http://">Details</a>
+            <a class="buty" href="http://">Product list</a>
+            <a class="buty" href="http://">Order</a>
+            <a class="buty" href="http://">Price</a>
+            <div class="margin">
+                <i class="fas fa-ambulance"></i>
+                <i class="fas fa-briefcase-medical"></i>
+            </div>
+        </div>
+    </nav>
+</header>
 <main>
     <section class="container">
         <div class="top-players">
-            <h2 class="player-name" class="section-title">Top-players</h2 class="player-name">
+            <h2 class="player-name" class="section-title">MD BADSHA'S website</h2 class="player-name">
             <div class="players">
-                <div class="player"><img src="images/players/player-1.png" alt="">
-                    <h2 class="player-name">Top player-1</h2 class="player-name">
+                <div class="player"><img src="images/badsha.jpg" alt="">
+                    <h2 class="player-name">MD BADSHA</h2 class="player-name">
                 </div>
-                <div class="player"><img src="images/players/player-2.png" alt="">
-                    <h2 class="player-name">Top player-2</h2 class="player-name">
+                <div class="player"><img src="images/fb.jpg" alt="">
+                    <h2 class="player-name">Mosaraf Parvej</h2 class="player-name">
                 </div>
-                <div class="player"><img src="images/players/player-3.png" alt="">
-                    <h2 class="player-name">
-                        Top player-3
+                <div class="player"><img src="images/red.png" alt="">
+                    <h2 class="player-name">Arif Hossain
                     </h2>
                 </div>
-                <div class="player"><img src="images/players/player-4.png" alt="">
-                    <h2 class="player-name">
-                        Top player-4
+                <div class="player"><img src="images/arif.jpg" alt="">
+                    <h2 class="player-name">Shanto Icra Medicine
                     </h2>
                 </div>
-                <div class="player"><img src="images/players/player-5.png" alt="">
-                    <h2 class="player-name">Top player-5</h2 class="player-name">
+                <div class="player"><img src="images/photo.jpg" alt="">
+                    <h2 class="player-name">Noor Mohammad</h2 class="player-name">
                 </div>
-                <div class="player"><img src="images/players/player-6.png" alt="">
-                    <h2 class="player-name">
-                        Top player-6
+                <div class="player"><img src="images/hero.jpg" alt="">
+                    <h2 class="player-name">Sekha-Arafat
                     </h2>
                 </div>
             </div>
